src/objects/PHI_Access_Log__c.object
<CustomObject>
    <description>PHI Access Log on detail pages</description>
    <fields>
        <fullName>Access_Location__c</fullName>
        <label>Access Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer Detail</fullName>
                </value>
                <value>
                    <fullName>Member Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer Detail</fullName>
                </value>
                <value>
                    <fullName>Member Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Capture the SSN value from masking,unmasking and copy future.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PHI Access Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EID__c</columns>
        <columns>Access_Location__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PHI-{0000}</displayFormat>
        <label>PHI Access Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHI Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>